project_D1: Init Django project D1

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 Python/New-chat-bot/CRYPTO_BOT/passwd.py
 Python/New-chat-bot/CURRENCY_EXCHANGE/passwd.py
+Python/New-chat-bot/.idea/
+Python/Django_prj/.idea/
+Python/Django_prj/venv/
+Python/Django_prj/main.py
+Python/Django_prj/tst
+
+
